--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.myapplication">
 
     <application
@@ -9,14 +10,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
- christyWorkspace
- Updated upstream
 
         <activity android:name=".LoginActivity"></activity>
         <activity android:name=".DatabaseActivity" />
- Stashed changes
-
-        <activity android:name=".DatabaseActivity"></activity>
+        <activity android:name=".DatabaseActivity"
+            tools:ignore="DuplicateActivity"></activity>
  master
         <activity android:name=".MainActivity">
             <intent-filter>
