commented out duplicate line 18

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,9 @@
 
         <activity android:name=".LoginActivity"></activity>
         <activity android:name=".DatabaseActivity" />
+        <!--
         <activity android:name=".DatabaseActivity"
-            tools:ignore="DuplicateActivity"></activity>
+            tools:ignore="DuplicateActivity"></activity> -->
  master
         <activity android:name=".MainActivity">
             <intent-filter>
