--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,10 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+    // access volley libary
+    implementation 'com.android.volley:volley:1.1.0'
+    // convert java object to json
+    implementation 'com.google.code.gson:gson:2.8.5'
+
 }
