Tommy front end Drive Record to Backend to MySQl functional. Driver still hardcoded (need to tie in with Login), some code still a bit clunky (using TextView instead of ListView), but works.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,18 +11,19 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">   <!-- internet after AS 9-->
 
-        <activity android:name=".MainActivity" >
+        <activity android:name=".MainActivity" />
+
+
+        <activity android:name=".DatabaseActivity" />
+
+
+        <activity android:name=".LoginActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".DatabaseActivity" />
-
-
-        <activity android:name=".LoginActivity" />
 
     </application>
 
